--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+nav > h1 {
+  padding-left: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+ul {
+  display: flex;
+}
+li {
+  padding-right: 20px;
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.active {
+  color: turquoise;
+}
+
+table {
+  /* border: 1px solid black; */
+  margin: 0 auto;
+  width: 70%;
+}
+thead {
+  font-size: large;
+  font-weight: 700;
+  background-color: cyan;
+}
+td {
+  border-bottom: 1px solid lightgray;
+  padding: 20px 10px;
+}
+
+.edit {
+  color: green;
+}
+
+.delete {
+  color: red;
+}
+
+.addNewBtn {
+  position: relative;
+  padding: 10px;
+  border-radius: 20px;
+  border: none;
+  cursor: pointer;
+  outline: 1px solid grey;
+  z-index: 1;
+  overflow: hidden;
+  font-weight: 700;
+  transition: all 0.5s linear;
+}
+
+.addNewBtn:hover {
+  color: yellow;
+}
+.addNewBtn::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: lightseagreen;
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  transform: translateX(-100%);
+  z-index: -1;
+}
+
+.addNewBtn:hover::before {
+  transition: all 0.8s linear;
+  transform: translateX(0);
 }
